chore: change yellow color

--- a/extras/alacritty/spacecat.yml
+++ b/extras/alacritty/spacecat.yml
@@ -10,7 +10,7 @@ colors:
     black: "#121212"
     red: "#f40041"
     green: "#25b455"
-    yellow: "#e1bc83"
+    yellow: "#e1b36c"
     blue: "#2c9ad9"
     magenta: "#e487d5"
     cyan: "#6fc8c2"
@@ -21,7 +21,7 @@ colors:
     black: "#121010"
     red: "#f40041"
     green: "#12b449"
-    yellow: "#e1b36c"
+    yellow: "#e7b159"
     blue: "#1692d9"
     magenta: "#e475d2"
     cyan: "#5bc8c1"
